--- a/macaque-early-vision.bib
+++ b/macaque-early-vision.bib
@@ -1,10 +1,10 @@
 @article{Sincich2002,
 author = {Sincich, L.C. and Horton, Jonathan C.},
-file = {:Users/bptripp/Documents/Mendeley Desktop/Sincich, Horton - 2002 - Divided by Cytochrome Oxidase A Map of the Projections from V1 to V2 in Macaques.pdf:pdf},
+file = {:Users/bptripp/Documents/Mendeley Desktop/Sincich, Horton - 2002 - Divided by cytochrome oxidase A map of the projections from V1 to V2 in macaques.pdf:pdf},
 journal = {Science},
 number = {March},
 pages = {1734--1738},
-title = {{Divided by Cytochrome Oxidase: A Map of the Projections from V1 to V2 in Macaques}},
+title = {{Divided by cytochrome oxidase: A map of the projections from V1 to V2 in macaques}},
 volume = {295},
 year = {2002}
 }
@@ -243,6 +243,108 @@ title = {{Configuration, in serial reconstruction, of individual axons projectin
 volume = {2},
 year = {1992}
 }
+@article{Barone2000,
+abstract = {The directionality of corticocortical projections is classified as feedforward (going from a lower to higher hierarchical levels), feedback (interconnecting descending levels), and lateral (interconnecting equivalent levels). Directionality is determined by the combined criteria of the laminar patterns of the axon terminals as well as the cells of origins and has been used to construct models of the visual system, which reveals a strict hierarchical organization {\{}(Felleman{\}} and Van Essen, 1991; Hilgetag et al., 1996a). However, these models are indeterminate partly because we have no indication of the distance separating adjacent levels. Here we have attempted to determine a graded parameter describing the anatomical relationship of interconnected areas. We have investigated whether the precise percentage of labeled supragranular layer neurons {\{}(SLN{\%}){\}} in each afferent area after injection in either visual areas V1 or V4 determines its hierarchical position in the model. This shows that pathway directionality in the Felleman and Van Essen model is characterized by a range of {\{}SLN{\%}{\}} values. The one exception is the projection of the frontal eye field to area V4, which resembles a feedforward projection. Individual areal differences in {\{}SLN{\%}{\}} values are highly significant, and the number of hierarchical steps separating a target area from a source area is found to be tightly correlated to {\{}SLN{\%}.{\}} The present results show that the hierarchical rank of each afferent area is reliably indicated by {\{}SLN{\%},{\}} and therefore this constitutes a graded parameter that is related to hierarchical distance.},
+author = {Barone, P and Batardiere, A and Knoblauch, K and Kennedy, H},
+doi = {10.1523/jneurosci.0414-12.2012},
+file = {:Users/bptripp/Documents/Mendeley Desktop/Barone et al. - 2000 - Laminar distribution of neurons in extrastriate areas projecting to visual areas V1 and V4 correlates with the hi.pdf:pdf},
+isbn = {1529-2401 (Electronic)},
+issn = {1529-2401},
+journal = {The Journal of Neuroscience},
+keywords = {a,ascribing each area to,by categorizing connections be-,cessing,extrastriate cortex,feedback,hierarchical models,monkey,pairs of areas and,primate,these models are constructed,tween huge numbers of,visual pro-},
+number = {9},
+pages = {3263--3281},
+pmid = {10777791},
+title = {{Laminar distribution of neurons in extrastriate areas projecting to visual areas V1 and V4 correlates with the hierarchical rank and indicates the operation of a distance rule.}},
+volume = {20},
+year = {2000}
+}
+@article{Constantinople2013,
+author = {Constantinople, Christine M and Bruno, Randy M},
+file = {:Users/bptripp/Documents/Mendeley Desktop/Constantinople, Bruno - 2013 - Deep Cortical Layers are Activated Directly by Thalamus.pdf:pdf},
+journal = {Science},
+number = {June},
+pages = {1591--1595},
+title = {{Deep Cortical Layers are Activated Directly by Thalamus}},
+volume = {340},
+year = {2013}
+}
+@article{Lamme1998,
+author = {Lamme, Victor A F and Super, Hans and Spekreijse, Henk},
+file = {:Users/bptripp/Documents/Mendeley Desktop/Lamme, Super, Spekreijse - 1998 - Feedforward, horizontal, and feedback processing in the visual cortex.pdf:pdf},
+journal = {Current Opinion in Neurobiology},
+pages = {529--535},
+title = {{Feedforward, horizontal, and feedback processing in the visual cortex}},
+volume = {8},
+year = {1998}
+}
+@article{Horton1984,
+author = {Horton, J. C.},
+file = {:Users/bptripp/Documents/Mendeley Desktop/Horton - 1984 - Cytochrome oxidase patches a new cytoarchitectonic feature of monkey visual cortex.pdf:pdf},
+journal = {Phil Trans R Soc Lond B},
+pages = {199--253},
+title = {{Cytochrome oxidase patches: a new cytoarchitectonic feature of monkey visual cortex}},
+volume = {304},
+year = {1984}
+}
+@article{Sillito2006,
+author = {Sillito, Adam M and Cudeiro, Javier and Jones, Helen E},
+doi = {10.1016/j.tins.2006.05.001},
+file = {:Users/bptripp/Documents/Mendeley Desktop/Sillito, Cudeiro, Jones - 2006 - Always returning feedback and sensory processing in visual cortex and thalamus(2).pdf:pdf},
+journal = {Trends in Neurosciences},
+number = {6},
+pages = {307--316},
+title = {{Always returning: feedback and sensory processing in visual cortex and thalamus}},
+volume = {29},
+year = {2006}
+}
+@article{Thomson2010,
+author = {Thomson, Alex M},
+doi = {10.3389/fnana.2010.00013},
+file = {:Users/bptripp/Documents/Mendeley Desktop/Thomson - 2010 - Neocortical layer 6, a review.pdf:pdf},
+journal = {Frontiers in Neuroanatomy},
+keywords = {anatomy,cortex,development,electrophysiology,histology,layer 6,pharmacology,review},
+number = {March},
+pages = {1--14},
+title = {{Neocortical layer 6, a review}},
+volume = {4},
+year = {2010}
+}
+@article{Sherman2007,
+author = {Sherman, S Murray},
+doi = {10.1016/j.conb.2007.07.003},
+file = {:Users/bptripp/Documents/Mendeley Desktop/Sherman - 2007 - The thalamus is more than just a relay.pdf:pdf},
+journal = {Current Opinion in Neurobiology},
+pages = {417--422},
+title = {{The thalamus is more than just a relay}},
+volume = {17},
+year = {2007}
+}
+@article{Yoshioka1996,
+author = {Yoshioka, Takashi and Dow, B. M.},
+file = {:Users/bptripp/Documents/Mendeley Desktop/Yoshioka, Dow - 1996 - Color, orientation and cytochrome oxidase reactivity in areas V1, V2 and V4 of macaque monkey visual cortex.pdf:pdf},
+journal = {Behavioural Brain Research},
+keywords = {color,cytochrome oxidase,extrastriate cortex,intrinsic connection,macaque monkey,orientation,vision,visual cortex},
+pages = {71--88},
+title = {{Color, orientation and cytochrome oxidase reactivity in areas V1, V2 and V4 of macaque monkey visual cortex}},
+volume = {76},
+year = {1996}
+}
+@article{Felleman2015,
+abstract = {Area V2 of macaque monkeys is traditionally thought to consist of 3 distinct functional compartments with characteristic cortical connections and functional properties. Orientation selectivity is one property that has frequently been used to distinguish V2 stripes, however, this receptive field property has been found in a high percentage of neurons across V2 compartments. Using quantitative intrinsic cortical imaging, we derived maps of preferred orientation, orientation selectivity, and orientation gradient in thin stripes, thick stripes, and interstripes in area V2. Orientation-selective responses were found in each V2 stripe, but the magnitude and organization of orientation selectivity differed significantly from stripe to stripe. Remarkably, the 2 pale stripes flanking each cytochrome oxidase dense stripe differed significantly in their representation of orientation resulting in their distinction as type-I and type-II interstripes. V2 orientation maps are characterized by clockwise and anticlockwise "orientation pinwheels", but unlike V1, they are not homogeneously distributed across V2. Furthermore, V2 stripes contain large-scale sequences of preferred orientation. These analyses demonstrate that V2 consists of 4 distinct functional compartments; thick stripes and type-II interstripes, which are strongly orientation selective and thin stripes and type-I interstripes, which are significantly less selective for orientation and exhibit larger orientation gradient magnitudes.},
+author = {Felleman, Daniel J. and Lim, Heejin and Xiao, Youping and Wang, Yi and Eriksson, Anastasia and Parajuli, Arun},
+doi = {10.1093/cercor/bhu033},
+file = {:Users/bptripp/Documents/Mendeley Desktop/Felleman et al. - 2015 - The representation of orientation in macaque V2 Four stripes not three.pdf:pdf},
+issn = {14602199},
+journal = {Cerebral Cortex},
+keywords = {cortical modules,cortical streams,cytochrome oxidase,intrinsic imaging,visual cortex},
+number = {9},
+pages = {2354--2369},
+pmid = {24614951},
+title = {{The representation of orientation in macaque V2: Four stripes not three}},
+volume = {25},
+year = {2015}
+}
 @article{Sincich2010,
 author = {Sincich, Lawrence C and Jocson, Cristina M and Horton, Jonathan C},
 doi = {10.1523/JNEUROSCI.5506-09.2010},
@@ -358,6 +460,16 @@ title = {{Laminar Patterns of Local Excitatory Input to Layer 5 Neurons in Macaq
 volume = {15},
 year = {2005}
 }
+@article{Livingstone1984,
+author = {Livingstone, M.S. and Hubel, H},
+file = {:Users/bptripp/Documents/Mendeley Desktop/Livingstone, Hubel - 1984 - Anatomy and physiology of a color system in the primate visual cortex.pdf:pdf},
+journal = {Journal of Neuroscience},
+number = {1},
+pages = {309--356},
+title = {{Anatomy and physiology of a color system in the primate visual cortex}},
+volume = {4},
+year = {1984}
+}
 @article{Livingstone1988,
 author = {Livingstone, Margaret and Hubel, David},
 file = {:Users/bptripp/Documents/Mendeley Desktop/Livingstone, Hubel - 1988 - Segregation of form, color, movement, and depth anatomy, physiology, and perception.pdf:pdf},
@@ -376,6 +488,21 @@ pages = {907--922},
 title = {{Contributions of individual layer 2-5 spiny neurons to local circuits in macaque primary visual cortex}},
 volume = {13},
 year = {1996}
+}
+@article{Maunsell1983,
+abstract = {The cortical and subcortical connections of the middle temporal visual area (MT) of the macaque monkey were investigated using combined injections of [3H]proline and horseradish peroxidase within MT. Cortical connections were assigned to specific visual areas on the basis of their relationship to the pattern of interhemispheric connections, revealed by staining for degeneration following callosal transection. MT was shown to be reciprocally connected with many topographically organized cortical visual areas, including V1, V2, V3, and V4. These pathways link regions representing corresponding portions of the visual field in the different areas. In addition, MT has reciprocal connections with two previously unidentified cortical areas, which we have designated the medial superior temporal area (MST) and the ventral intraparietal area (VIP). The laminar distribution of terminals and cell bodies in cortical areas connected with MT follows a consistent pattern. In areas V1, V2, and V3, the projections to MT arise largely or exclusively from cells in supragranular layers, and the reciprocal connections from MT terminate mainly in supragranular and infragranular layers. In contrast, the projections to MST and VIP terminate mainly in layer IV, and the reciprocal pathways originate from cells in both superficial and deep layers. On the basis of this pattern, each connection can be designated as forward or feedback in nature, and a hierarchical arrangement of visual areas can be determined. In this hierarchy, MT is at a higher level than V1, V2, and V3, and at a lower level than MST and VIP. Subcortical projections were seen from MT to the claustrum, the putamen, the caudate nucleus, the inferior and lateral subdivisions of the pulvinar complex, the ventral lateral geniculate nucleus, the reticular nucleus of the thalamus, the superior colliculus, and the pontine nuclei.},
+author = {Maunsell, J H and {Van Essen}, D C},
+file = {:Users/bptripp/Documents/Mendeley Desktop/Maunsell, Van Essen - 1983 - The connections of the middle temporal visual area (MT) and their relationship to a cortical hierarchy in t.pdf:pdf},
+isbn = {0270-6474 (Print)$\backslash$r0270-6474 (Linking)},
+issn = {0270-6474},
+journal = {The Journal of Neuroscience},
+keywords = {0-6474,00,02,0312-2563,63,o},
+number = {12},
+pages = {2563--2586},
+pmid = {6655500},
+title = {{The connections of the middle temporal visual area (MT) and their relationship to a cortical hierarchy in the macaque monkey.}},
+volume = {3},
+year = {1983}
 }
 @article{Sawatari2000,
 author = {Sawatari, Atomu and Callaway, Edward M},
@@ -411,6 +538,23 @@ title = {{Two functional channels from primary visual cortex to dorsal visual co
 url = {http://www.ncbi.nlm.nih.gov/pubmed/11303106},
 volume = {292},
 year = {2001}
+}
+@article{Markov2014,
+abstract = {Retrograde tracer injections in 29 of the 91 areas of the macaque cerebral cortex revealed 1,615 interareal pathways, a third of which have not previously been reported. A weight index (extrinsic fraction of labeled neurons [FLNe]) was determined for each area-to-area pathway. Newly found projections were weaker on average compared with the known projections; nevertheless, the 2 sets of pathways had extensively overlapping weight distributions. Repeat injections across individuals revealed modest FLNe variability given the range of FLNe values (standard deviation {\textless}1 log unit, range 5 log units). The connectivity profile for each area conformed to a lognormal distribution, where a majority of projections are moderate or weak in strength. In the G29 × 29 interareal subgraph, two-thirds of the connections that can exist do exist. Analysis of the smallest set of areas that collects links from all 91 nodes of the G29 × 91 subgraph (dominating set analysis) confirms the dense (66{\%}) structure of the cortical matrix. The G29 × 29 subgraph suggests an unexpectedly high incidence of unidirectional links. The directed and weighted G29 × 91 connectivity matrix for the macaque will be valuable for comparison with connectivity analyses in other species, including humans. It will also inform future modeling studies that explore the regularities of cortical networks.},
+author = {Markov, N T and Ercsey-Ravasz, M M and {Ribeiro Gomes}, a R and Lamy, C and Magrou, L and Vezoli, J and Misery, P and Falchier, A and Quilodran, R and Gariel, M a and Sallet, J and Gamanut, R and Huissoud, C and Clavagnier, S and Giroud, P and Sappey-Marinier, D and Barone, P and Dehay, C and Toroczkai, Z and Knoblauch, K and {Van Essen}, D C and Kennedy, H},
+doi = {10.1093/cercor/bhs270},
+file = {:Users/bptripp/Documents/Mendeley Desktop/Markov et al. - 2014 - A weighted and directed interareal connectivity matrix for macaque cerebral cortex.pdf:pdf},
+issn = {1460-2199},
+journal = {Cerebral Cortex},
+keywords = {connection,cortex,graph,monkey,network},
+month = {jan},
+number = {1},
+pages = {17--36},
+pmid = {23010748},
+title = {{A weighted and directed interareal connectivity matrix for macaque cerebral cortex}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3862262{\&}tool=pmcentrez{\&}rendertype=abstract},
+volume = {24},
+year = {2014}
 }
 @article{Lund1975a,
 author = {Lund, Jennifer S and Lund, Raymond D and Hendrickson, Anita E and Bunt, Ann H and Fuchs, Albert F},
